--- a/view/mainwindow.ui
+++ b/view/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
+    <width>1192</width>
     <height>600</height>
    </rect>
   </property>
@@ -14,41 +14,40 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="Render" name="widget" native="true">
+   <widget class="Render" name="gl_visual" native="true">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>120</y>
-      <width>671</width>
-      <height>391</height>
+      <x>170</x>
+      <y>100</y>
+      <width>801</width>
+      <height>431</height>
      </rect>
     </property>
    </widget>
    <widget class="QPushButton" name="render_button">
     <property name="geometry">
      <rect>
-      <x>630</x>
-      <y>0</y>
-      <width>100</width>
-      <height>32</height>
+      <x>510</x>
+      <y>20</y>
+      <width>111</width>
+      <height>51</height>
      </rect>
     </property>
     <property name="text">
      <string>Render</string>
     </property>
    </widget>
+   <widget class="QDoubleSpinBox" name="double_spin_box_scale">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>180</y>
+      <width>121</width>
+      <height>21</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>800</width>
-     <height>24</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <customwidgets>
   <customwidget>
